Modify the implementation logic of ObjectList, optimize GroupedBar and StackedBar, the next step: implement Scatter Plot